--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: WY Blog
+title: Mr.nan Blog
 SEOTitle: 旧故人的博客 | Mr.nan Blog
 header-img: img/post-bg-desk.jpg
 email: 614304982@qq.com
